8225014: Separate ShenandoahRootScanner method for object_iterate

Reviewed-by: shade